@@ -1,5 +1,5 @@
 AM_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)\" -DGETTEXT_PACKAGE=\"matchbox-panel\"
-AM_CFLAGS = -Wall -g $(MATCHBOX_PANEL_CFLAGS) \
+AM_CFLAGS = -Wall -g $(MATCHBOX_PANEL_CFLAGS) $(LIBNOTIFY_CFLAGS) \
 	    -I$(top_srcdir) -I$(top_builddir)
 	    
 appletdir = $(libdir)/matchbox-panel
@@ -23,6 +23,7 @@ libsystray_la_SOURCES = $(BUILT_SOURCES) \
                         eggtraymanager.c \
 			eggtraymanager.h \
 			systray.c
+libsystray_la_LIBADD = $(LIBNOTIFY_LIBS)
 
 EXTRA_DIST = eggmarshalers.list
 
