@@ -1,5 +1,15 @@
 2006-08-21  Jorn Baayen  <jorn@openedhand.com>
 
+	* applets/systray/Makefile.am:
+	* applets/systray/systray.c: (tray_icon_added_cb),
+	(message_sent_cb), (message_cancelled_cb), (screen_changed_cb),
+	(mb_panel_applet_create):
+	* configure.ac:
+
+	Added optional support for tray icon messages using libnotify.
+
+2006-08-21  Jorn Baayen  <jorn@openedhand.com>
+
 	* applets/Makefile.am:
 	* applets/clock.c:
 	* applets/clock/Makefile.am:
